[package]
name = "tagged-pointer"
version = "0.2.8-dev"
edition = "2018"
rust-version = "1.51"
description = "Platform-independent space-efficient tagged pointers"
documentation = "https://docs.rs/tagged-pointer"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/tagged-pointer"
license = "Apache-2.0"
keywords = ["pointer", "tag"]
categories = ["data-structures", "no-std"]

[features]
fallback = []

# Optional, for tests only. Uncomment to enable.
#dev-dependencies.compiletest_rs.version = "0.10"
