[package]
name = "tagged-pointer"
version = "0.2.8-dev"
edition = "2018"
rust-version = "1.51"
description = "Platform-independent space-efficient tagged pointers"
documentation = "https://docs.rs/tagged-pointer"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/tagged-pointer"
license = "Apache-2.0"
keywords = ["pointer", "tag"]
categories = ["data-structures", "no-std"]

[features]
fallback = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(has_unsafe_op_in_unsafe_fn)", "cfg(has_const_assert)"]
